@@ -23,13 +23,19 @@ Mario Frasca                                            20 Jan 2000-14 Feb 2000
 Paul Nasrat             <pnasrat@uk.now.com>            29 Oct 2001-20 Nov 2001
 Per Olofsson            <MagerValp@cling.gu.se>         25 Feb 2000
 Peter L Vachuska        <pvachusk@nconnect.net>         13 Aug 2001
-Riley Williams          <rhw@MemAlpha.cx>               16 Nov 1998-20 Jan 2002
+Riley Williams          <rhw@MemAlpha.cx>               16 Nov 1998-23 Jan 2002
 Roman Festchook         <roma@polesye.net>              27 Oct 2001
 Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
 Simon Wood                                              06 Jan 2000-12 Jan 2000
 Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999-02 Apr 2001
 
 -------------------------------------------------------------------------------
+
+Wed Jan 23 00:56:51 GMT 2002	Riley Williams <rhw@MemAlpha.cx>
+
+	* Made autoconf.h auto-created in all cases where it is needed.
+	  This includes those cases in the elkscmd package.
+	* Remove contents of elksfs.h header if elksfs not enabled.
 
 Sun Jan 20 06:45:50 MST 2002	M Warner Losh <imp@village.org>
 
